<resources>
    <string name="app_name">ПокушAI</string>
    <string name="underlined_text"><u>Создать аккаунт</u></string>
    <string name="forgot_password"><u>Забыл пароль</u></string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">ПокушAI</string>
    <string name="nav_header_desc">android.studio@android.com</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Все рецепты</string>
    <string name="menu_slideshow">Аккаунт</string>


    <string name="language_button">EN</string>


    <!-- MainActivity -->
    <string name="feed">Новостей</string>
    <string name="recipes">Рецепты</string>
    <string name="profile">Профиль</string>


    <!-- MainFragment -->
    <string name="settings">Настройки</string>

    <string name="searchProducts">Поиск продуктов:</string>
    <string name="buttonDeleteSearch">Убрать все отмеченные продукты</string>
    <string name="questionLine">Какие продукты у вас есть дома?</string>

    <string name="save_allergens">Сохранить аллергены</string>
    <string name="allergens_title">Выберите аллергены</string>

    <string name="searchRecipes">Найти рецепт</string>

    <string name="ingredient0">Апельсин</string>
    <string name="ingredient1">Базилик</string>
    <string name="ingredient2">Банан</string>
    <string name="ingredient3">Батон</string>
    <string name="ingredient4">Бекон</string>
    <string name="ingredient5">Ваниль</string>
    <string name="ingredient6">Ванильный сахар</string>
    <string name="ingredient7">Виноград</string>
    <string name="ingredient8">Вишня</string>
    <string name="ingredient9">Вода</string>
    <string name="ingredient10">Говядина</string>
    <string name="ingredient11">Горох</string>
    <string name="ingredient12">Горчица</string>
    <string name="ingredient13">Гречневая крупа</string>
    <string name="ingredient14">Грибы</string>
    <string name="ingredient15">Груша</string>
    <string name="ingredient16">Дрожжи</string>
    <string name="ingredient17">Зелень</string>
    <string name="ingredient18">Изюм</string>
    <string name="ingredient19">Кабачок</string>
    <string name="ingredient20">Каперсы</string>
    <string name="ingredient21">Капуста</string>
    <string name="ingredient22">Картофель</string>
    <string name="ingredient23">Квас</string>
    <string name="ingredient24">Кетчуп</string>
    <string name="ingredient25">Кефир</string>
    <string name="ingredient26">Клюква</string>
    <string name="ingredient27">Колбаса</string>
    <string name="ingredient28">Копчёные рёбра</string>
    <string name="ingredient29">Кориандр</string>
    <string name="ingredient30">Корица</string>
    <string name="ingredient31">Кукуруза</string>
    <string name="ingredient32">Куриное филе</string>
    <string name="ingredient33">Куриные ножки</string>
    <string name="ingredient34">Куркума</string>
    <string name="ingredient35">Лаваш</string>
    <string name="ingredient36">Лавровый лист</string>
    <string name="ingredient37">Лапша</string>
    <string name="ingredient38">Лимон</string>
    <string name="ingredient39">Лимонный сок</string>
    <string name="ingredient40">Лук</string>
    <string name="ingredient41">Майонез</string>
    <string name="ingredient42">Манная крупа</string>
    <string name="ingredient43">Маслины</string>
    <string name="ingredient44">Молоко</string>
    <string name="ingredient45">Морковь</string>
    <string name="ingredient46">Мука</string>
    <string name="ingredient47">Мясо</string>
    <string name="ingredient48">Мята</string>
    <string name="ingredient49">Мёд</string>
    <string name="ingredient50">Овсяные хлопья</string>
    <string name="ingredient51">Огурцы</string>
    <string name="ingredient52">Оливки</string>
    <string name="ingredient53">Орехи</string>
    <string name="ingredient54">Паприка</string>
    <string name="ingredient55">Перепелиные яйца</string>
    <string name="ingredient56">Перец</string>
    <string name="ingredient57">Петрушка</string>
    <string name="ingredient58">Помидоры</string>
    <string name="ingredient59">Помидоры черри</string>
    <string name="ingredient60">Прованские травы</string>
    <string name="ingredient61">Разрыхлитель</string>
    <string name="ingredient62">Растительное масло</string>
    <string name="ingredient63">Редис</string>
    <string name="ingredient64">Редька</string>
    <string name="ingredient65">Репчатый лук</string>
    <string name="ingredient66">Рис</string>
    <string name="ingredient67">Салат</string>
    <string name="ingredient68">Сахар</string>
    <string name="ingredient69">Свекла</string>
    <string name="ingredient70">Свинина</string>
    <string name="ingredient71">Сельдерей</string>
    <string name="ingredient72">Семечки</string>
    <string name="ingredient73">Сладкий перец</string>
    <string name="ingredient74">Сливки</string>
    <string name="ingredient75">Сливочное масло</string>
    <string name="ingredient76">Сметана</string>
    <string name="ingredient77">Сода</string>
    <string name="ingredient78">Соль</string>
    <string name="ingredient79">Сосиски</string>
    <string name="ingredient80">Спагетти</string>
    <string name="ingredient81">Специи</string>
    <string name="ingredient82">Сухари панировочные</string>
    <string name="ingredient83">Сыр</string>
    <string name="ingredient84">Творог</string>
    <string name="ingredient85">Томатная паста</string>
    <string name="ingredient86">Укроп</string>
    <string name="ingredient87">Уксус</string>
    <string name="ingredient88">Фарш</string>
    <string name="ingredient89">Хлеб</string>
    <string name="ingredient90">Чернослив</string>
    <string name="ingredient91">Черный перец</string>
    <string name="ingredient92">Чеснок</string>
    <string name="ingredient93">Чечевица</string>
    <string name="ingredient94">Яблоки</string>
    <string name="ingredient95">Яйца</string>

    <!-- ResultFragment -->
    <string name="recip0">Беляши</string>
    <string name="recip1">Блины</string>
    <string name="recip2">Блины с мясом</string>
    <string name="recip3">Борщ</string>
    <string name="recip4">Горячие бутерброды</string>
    <string name="recip5">Гречневая каша</string>
    <string name="recip6">Жаренный картофель</string>
    <string name="recip7">Запеканка</string>
    <string name="recip8">Картофельное пюре</string>
    <string name="recip9">Картошка по-французски</string>
    <string name="recip10">Котлеты</string>
    <string name="recip11">Суп куриный</string>
    <string name="recip12">Лагман</string>
    <string name="recip13">Макароны</string>
    <string name="recip14">Манная каша</string>
    <string name="recip15">Торт Манник</string>
    <string name="recip16">Торт Медовик</string>
    <string name="recip17">Мороженное</string>
    <string name="recip18">Мюсли</string>
    <string name="recip19">Мясной пирог</string>
    <string name="recip20">Наггетсы</string>
    <string name="recip21">Торт Наполеон</string>
    <string name="recip22">Овощное рагу</string>
    <string name="recip23">Овсянная каша</string>
    <string name="recip24">Окрошка</string>
    <string name="recip25">Оладьи</string>
    <string name="recip26">Омлет</string>
    <string name="recip27">Паста Болоньеза</string>
    <string name="recip28">Паста Карбонара</string>
    <string name="recip29">Пельмени</string>
    <string name="recip30">Печенье</string>
    <string name="recip31">Пончики</string>
    <string name="recip32">Рассольник</string>
    <string name="recip33">Салат Греческий</string>
    <string name="recip34">Салат Цезарь</string>
    <string name="recip35">Солянка</string>
    <string name="recip36">Сосиски в тесте</string>
    <string name="recip37">Суп гороховый</string>
    <string name="recip38">Суп гречневый</string>
    <string name="recip39">Суп грибной</string>
    <string name="recip40">Суп овощной</string>
    <string name="recip41">Суп с фрикадельками</string>
    <string name="recip42">Сырники</string>
    <string name="recip43">Тушеный картофель с курицей</string>
    <string name="recip44">Фрикадельки</string>
    <string name="recip45">Фруктовый салат</string>
    <string name="recip46">Шарлотка</string>
    <string name="recip47">Шаурма</string>
    <string name="recip48">Эклеры</string>
    <string name="recip49">Яичница-глазунья</string>

    <!-- RecipePrescriptionFragment -->

    <string name="calories">Калории</string>
    <string name="protein">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="portions">Порции</string>

    <string name="g">г</string>
    <string name="kcal">кКал</string>

    <string name="ingredients">Ингредиенты:</string>
    <string name="stepbystep">Пошаговый рецепт:</string>

    <!-- In-app notifications -->

    <string name="select3ing">Пожалуйста, выберите минимум 3 ингредиентов</string>
    <string name="noconn">Нет подключения к интернету</string>

    <!-- AllergensFragment -->
    <string name="whatAreYouAllergicTo">На что у вас аллергия?</string>

</resources>