<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Увеличиваем отступ снизу на высоту меню -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Нижнее меню -->
    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/feed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/feed"
            android:contentDescription="@string/feed"
            app:tint="?attr/iconColor" />

        <ImageButton
            android:id="@+id/allRecipes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/recipes"
            android:contentDescription="@string/recipes"
            app:tint="?attr/iconColor"/>

        <ImageButton
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/profile"
            android:contentDescription="@string/profile"
            app:tint="?attr/iconColor"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>