<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/language_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_button"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:onClick="onLanguageButtonClick"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/allergen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/orange"
        android:onClick="onLanguageButtonClick"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/language_switch_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSearchProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/searchProducts"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/searchviewcastom"
        android:queryHint="Поиск продуктов"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSearchProducts"/>

    <Button
        android:id="@+id/deleteCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/buttonDeleteSearch"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"/>

    <TextView
        android:id="@+id/textViewProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/questionLine"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteCheck"/>

    <ScrollView
        android:id="@+id/scrollViewProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:nestedScrollingEnabled="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/searchRecipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProducts">

        <LinearLayout
            android:id="@+id/switches_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"/>

    </ScrollView>

    <Button
        android:id="@+id/searchRecipes"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange"
        android:text="@string/searchRecipes"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>